<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f9f9f9"
    tools:context=".menu">

    <TableLayout
        android:layout_width="383dp"
        android:layout_height="371dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="208dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/gestos-voz"
                style="@android:style/Widget.DeviceDefault.ImageButton"
                android:layout_width="124dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/icono_gestos_voz"
                android:onClick="a_gesto_voz"
                android:scaleType="centerInside"
                app:srcCompat="@mipmap/hand" />

            <ImageButton
                android:id="@+id/gestos-texto"
                android:layout_width="122dp"
                android:layout_height="113dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/icono_gestos_texto"
                android:cropToPadding="false"
                android:onClick="a_gesto_texto"
                android:scaleType="centerInside"
                app:srcCompat="@mipmap/mano" />

            <ImageButton
                android:id="@+id/texto-voz"
                android:layout_width="132dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/icono_texto_voz"
                android:onClick="a_texto_voz"
                android:scaleType="centerInside"
                app:srcCompat="@mipmap/notas" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/texto-gestos"
                android:layout_width="125dp"
                android:layout_height="101dp"
                android:contentDescription="@string/icono_texto_señas"
                android:onClick="a_texto_gestos"
                android:scaleType="centerInside"
                app:srcCompat="@mipmap/text" />

            <ImageButton
                android:id="@+id/voz-señas"
                android:layout_width="121dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/icono_voz_señas"
                android:onClick="a_voz_gestos"
                android:scaleType="centerCrop"
                app:srcCompat="@android:drawable/ic_lock_silent_mode_off" />

            <ImageButton
                android:id="@+id/voz-texto"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@string/icono_voz_texto"
                android:onClick="a_voz_texto"
                android:scaleType="centerCrop"
                app:srcCompat="@android:drawable/ic_btn_speak_now" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/diccionario"
                android:layout_width="127dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/icono_diccionario"
                android:onClick="a_diccionario"
                android:scaleType="centerInside"
                app:srcCompat="@mipmap/book" />

            <ImageButton
                android:id="@+id/configuracion"
                android:layout_width="118dp"
                android:layout_height="115dp"
                android:contentDescription="@string/menu_configuracion"
                android:onClick="a_config"
                android:scaleType="centerInside"
                app:srcCompat="@mipmap/tuerca" />

            <ImageButton
                android:id="@+id/sugerencias"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@string/menu_consejos"
                android:onClick="a_consejos"
                android:scaleType="centerInside"
                app:srcCompat="@mipmap/lighting" />
        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>